--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^17.0.1",
     "redux-mock-store": "^1.5.4",
-    "sinon": "^9.2.4"
+    "sinon": "^9.2.4",
+    "stylelint": "13.3.x",
+    "stylelint-config-standard": "20.0.x",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "3.17.x"
   }
 }
